<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <!-- Misc app strings -->
    <string name="app_name">Juicy</string>
    <string name="app_version">0.3 Preview</string>
    <string name="title">Juicy</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="clear_all">Clear All</string>
    <string name="save">Save</string>
    
    <!-- Recipe calcylator -->
    <string name="amount_to_make">Amount To Make</string>
    <string name="flavor1">Flavor 1</string>
    <string name="flavor2">Flavor 2</string>
    <string name="flavor3">Flavor 3</string>
    <string name="flavor4">Flavor 4</string>
    <string name="flavor5">Flavor 5</string>
    <string name="flavor6">Flavor 6</string>
    <string name="flavor7">Flavor 7</string>
    <string name="hint_amount_to_make">Amount in mL</string>
    <string name="hint_flavor_name">Flavor Name</string>
    <string name="instructions">Input your recipe and tap "Calculate."</string>
    <string name="percent">%</string>
    <string name="load_error">Error loading recipe.</string>
    
    <!-- Resistance calculator -->
    <string name="resistance1">Resistance 1</string>
    <string name="resistance2">Resistance 2</string>
    <string name="resistance3">Resistance 3</string>
    <string name="resistance4">Resistance 4</string>
    
    <!-- Ohm's Law calculator -->
    <string name="ohm_symbol">Ω</string>
    <string name="voltage">Voltage</string>
    <string name="current">Current</string>
    <string name="resistance">Resistance</string>
    <string name="power">Power</string>
    
    <!-- Coil Builder -->
    <string name="wire">Wire</string>
    <string name="coil">Coil</string>
    <string-array name="coils">
        <item>Single</item>
        <item>Dual</item>
        <item>Triple</item>
        <item>Quad</item>
    </string-array>
    <string name="target_resistance">Target Resistance</string>
    
    <!-- Settings -->
    <string name="battery">Battery</string>
    <string name="starting_page">Starting Page</string>
    <string-array name="pages">
        <item>Recipe</item>
        <item>Resistance</item>
        <item>Power</item>
        <item>Coil Builder</item>
    </string-array>
    
    <!-- Menu stuff -->
    <string name="menu_save">Save</string>
    <string name="menu_open">Open</string>
    
    <!-- Drawer icon descriptions -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_icon_desc">Icon for a menu item</string>
    
    <!-- Drawer stuff -->
    <string name="drawer_title_recipe">Recipes</string>
    <string name="drawer_subtitle_recipe">Calculate your recipes.</string>
    <string name="drawer_title_resistance">Resistance</string>
    <string name="drawer_subtitle_resistance">Calculate total coil resistance.</string>
    <string name="drawer_title_power">Power</string>
    <string name="drawer_subtitle_power">Calculate amp draw, wattage, etc.</string>
    <string name="drawer_title_coil_builder">Coil Builder</string>
    <string name="drawer_subtitle_coil_builder">Determine your ideal coil build.</string>
    <string name="drawer_title_settings">Settings</string>
    <string name="drawer_subtitle_settings">Change Juicy\'s settings.</string>
    <string name="drawer_title_about">About</string>
    <string name="drawer_subtitle_about">Learn about Juicy.</string>
    
    <!-- About stuff -->
    <string name="about_copyright">© 2014 sli</string>
    <string name="about_created_using">Created using:</string>
    <string name="about_special_thanks_label">Special thanks to:</string>
    <string name="about_special_thanks">Dan-O at DanoSongs.com for the demo video music.</string>
    <string name="about_disclaimer_label">Disclaimer:</string>
    <string name="about_disclaimer">By using this app, you agree that neither sli nor Juicy Mobile are responsible for any personal injury or damage to your device. Be safe, and do not build coils, especially sub ohm, unless you know what you\'re doing.</string>
    
    <!-- About URLs -->
    <string name="about_github_url">https://github.com/sli/juicy-mobile</string>
    <string name="about_rjuicyapp_url">http://www.reddit.com/r/juicyapp</string>
    <string name="about_abs_url">http://actionbarsherlock.com/</string>
    <string name="about_file_chooser_url">https://github.com/sli/android-file-chooser/</string>

</resources>
