<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bCalculate"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/amount_to_make" />

            <EditText
                android:id="@+id/etAmountToMake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView1"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textView1"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/hint_amount_to_make"
                android:inputType="numberDecimal" />

            <!-- Flavor 1 -->

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/etAmountToMake"
                android:layout_below="@+id/etAmountToMake"
                android:layout_marginTop="8dp"
                android:text="@string/flavor1" />

            <EditText
                android:id="@+id/etFlavor1Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView2"
                android:ems="10"
                android:hint="@string/hint_flavor_name" />

            <EditText
                android:id="@+id/etFlavor1Percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/etFlavor1Name"
                android:layout_alignBottom="@+id/etFlavor1Name"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/etFlavor1Name"
                android:ems="10"
                android:hint="@string/percent"
                android:inputType="numberDecimal" />
            <!-- End Flavor 1 -->


            <!-- Flavor 2 -->

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/etAmountToMake"
                android:layout_below="@+id/etFlavor1Percent"
                android:layout_marginTop="8dp"
                android:text="@string/flavor2" />

            <EditText
                android:id="@+id/etFlavor2Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView3"
                android:ems="10"
                android:hint="@string/hint_flavor_name" />

            <EditText
                android:id="@+id/etFlavor2Percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/etFlavor2Name"
                android:layout_alignBottom="@+id/etFlavor2Name"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/etFlavor2Name"
                android:ems="10"
                android:hint="@string/percent"
                android:inputType="numberDecimal" />
            <!-- End Flavor 2 -->


            <!-- Flavor 3 -->

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/etAmountToMake"
                android:layout_below="@+id/etFlavor2Percent"
                android:layout_marginTop="8dp"
                android:text="@string/flavor3" />

            <EditText
                android:id="@+id/etFlavor3Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView4"
                android:ems="10"
                android:hint="@string/hint_flavor_name" />

            <EditText
                android:id="@+id/etFlavor3Percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/etFlavor3Name"
                android:layout_alignBottom="@+id/etFlavor3Name"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/etFlavor3Name"
                android:ems="10"
                android:hint="@string/percent"
                android:inputType="numberDecimal" />
            <!-- End Flavor 3 -->


            <!-- Flavor 4 -->

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/etAmountToMake"
                android:layout_below="@+id/etFlavor3Percent"
                android:layout_marginTop="8dp"
                android:text="@string/flavor4" />

            <EditText
                android:id="@+id/etFlavor4Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView5"
                android:ems="10"
                android:hint="@string/hint_flavor_name" />

            <EditText
                android:id="@+id/etFlavor4Percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/etFlavor4Name"
                android:layout_alignBottom="@+id/etFlavor4Name"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/etFlavor4Name"
                android:ems="10"
                android:hint="@string/percent"
                android:inputType="numberDecimal" />
            <!-- End Flavor 4 -->
            
            <!-- Flavor 5 -->

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/etAmountToMake"
                android:layout_below="@+id/etFlavor4Percent"
                android:layout_marginTop="8dp"
                android:text="@string/flavor5" />

            <EditText
                android:id="@+id/etFlavor5Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView6"
                android:ems="10"
                android:hint="@string/hint_flavor_name" />

            <EditText
                android:id="@+id/etFlavor5Percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/etFlavor5Name"
                android:layout_alignBottom="@+id/etFlavor5Name"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/etFlavor5Name"
                android:ems="10"
                android:hint="@string/percent"
                android:inputType="numberDecimal" />
            <!-- End Flavor 5 -->
            
            <!-- Flavor 6 -->

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/etAmountToMake"
                android:layout_below="@+id/etFlavor5Percent"
                android:layout_marginTop="8dp"
                android:text="@string/flavor6" />

            <EditText
                android:id="@+id/etFlavor6Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView7"
                android:ems="10"
                android:hint="@string/hint_flavor_name" />

            <EditText
                android:id="@+id/etFlavor6Percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/etFlavor6Name"
                android:layout_alignBottom="@+id/etFlavor6Name"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/etFlavor6Name"
                android:ems="10"
                android:hint="@string/percent"
                android:inputType="numberDecimal" />
            <!-- End Flavor 6 -->
            
            <!-- Flavor 7 -->

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/etAmountToMake"
                android:layout_below="@+id/etFlavor6Percent"
                android:layout_marginTop="8dp"
                android:text="@string/flavor7" />

            <EditText
                android:id="@+id/etFlavor7Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView8"
                android:ems="10"
                android:hint="@string/hint_flavor_name" />

            <EditText
                android:id="@+id/etFlavor7Percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/etFlavor7Name"
                android:layout_alignBottom="@+id/etFlavor7Name"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/etFlavor7Name"
                android:ems="10"
                android:hint="@string/percent"
                android:inputType="numberDecimal" />
            <!-- End Flavor 4 -->

            <WebView
                android:id="@+id/wvRecipe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/etFlavor7Name"
                android:layout_marginTop="18dp" />
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/bCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/bClearRecipe"
        android:text="@string/calculate" />

    <Button
        android:id="@+id/bClearRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/clear" />

</RelativeLayout>